<resources>
    <string name="app_name" translatable="false">FatBook</string>
    <string name="app_name_beta" translatable="false">FatBook BETA</string>
    <string name="tagline_fatbook">Get your forks ready</string>
    <string name="tag_copyright" translatable="false">Ⓒ 2023 PotatoCorp V 2.0.0</string>
    <string name="tag_version" translatable="false">Ⓒ 2023 PotatoCorp V 2.0.0</string>
    <string name="title_welcome">welcome to</string>
    <string name="title_app_name_welcome" translatable="false">FatBook</string>
    <string name="btn_login_welcome">Login</string>
    <string name="btn_register_welcome">Register</string>
    <string name="title_app_name_disconnect" translatable="false">FatBook</string>
    <string name="adds_splash">Something went wrong. \n Check your Internet connection</string>
    <string name="btn_rectry_splash">retry</string>
    <string name="dialog_splash">Im just \n eating my soup.</string>
    <string name="title_login">welcome back</string>
    <string name="title_app_name_login" translatable="false">FatBook</string>
    <string name="hint_username_login">Username</string>
    <string name="hint_password_login">Password</string>
    <string name="btn_login_login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="dialog_login">Nice to meet you again!</string>
    <string name="dialog_wrong_data_login">Wrong data\n Try again or click\n \"<u>forgot password</u>\"</string>
    <string name="title_app_name_new_pass" translatable="false">FatBook</string>
    <string name="adds_new_password_new_pass">Set new password and repeat:</string>
    <string name="hint_new_password_login_new_pass">New password</string>
    <string name="hint_repeat_new_password_login_new_pass">Repeat password</string>
    <string name="btn_next_login_new_pass">next</string>
    <string name="dialog_new_pass">Password must be 6–16 \n characters long and \n contains only numbers \n and letters</string>
    <string name="dialog_new_pass_passwords_do_not_match">Passwords do not match</string>
    <string name="title_app_name_register_email" translatable="false">FatBook</string>
    <string name="adds_register_email">Enter actual e-mail:</string>
    <string name="hint_email_register_email" translatable="false">e-mail</string>
    <string name="btn_next_register_email">next</string>
    <string name="dialog_register_email_error">Only one user can be \n registered to an email</string>
    <string name="dialog_wrong_data_register_email">This email is not entered \n correctly</string>
    <string name="dialog_email_used_register_email">This email is already in \n use</string>
    <string name="dialog_register_error">Something went wrong. \n Try again</string>
    <string name="title_app_name_register_password" translatable="false">FatBook</string>
    <string name="adds_register_password">Set password:</string>
    <string name="hint_password_register_password">Password</string>
    <string name="btn_next_register_password">next</string>
    <string name="dialog_register_password">Password must be 6–20 \n characters long</string>
    <string name="title_app_name_register_username" translatable="false">FatBook</string>
    <string name="adds_register_username">Set Username:</string>
    <string name="hint_username_register_username">Username</string>
    <string name="btn_next_register_username">next</string>
    <string name="dialog_register_username">Use only lowercase\n letters and numbers,\n special characters\n \".\" and \"_\"</string>
    <string name="dialog_register_username_invalid">This Username\n is not entered correctly</string>
    <string name="dialog_register_username_unavailable">This Username \n is already in use</string>
    <string name="title_account_created">welcome to</string>
    <string name="title_app_name_register_account_created" translatable="false">FatBook</string>
    <string name="adds_account_created">Your account has been created</string>
    <string name="btn_next_account_created">next</string>
    <string name="dialog_account_created">Nice to meet you,\n %s!\n Let\'s make our book\n more fat!</string>
    <string name="title_app_name_verification_code" translatable="false">FatBook</string>
    <string name="adds_verification_code">Verification code:</string>
    <string name="hint_verification_code" translatable="false">0-0-0-0-0-0</string>
    <string name="btn_next_verification_code">next</string>
    <string name="dialog_verification_code">Verification code was \n sent to your e-mail</string>
    <string name="dialog_wrong_verification_code_2_500">Wrong code</string>
    <string name="dialog_wrong_verification_code_1">This code is already confirmed</string>
    <string name="dialog_wrong_verification_code_3">This code has expired</string>
    <string name="resend_verification_code">resend code</string>
    <string name="resend_verification_code_timer">(%s) resend code</string>
    <string name="set_cooking_time_tmpl_hours">%d h</string>
    <string name="set_cooking_time_tmpl_min">%d min</string>
    <string name="default_cooking_time">15 min</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_messages">New message</string>
    <string name="title_add_recipe">Add recipe</string>
    <string name="title_user_profile">Profile</string>
    <string name="title_fatbook_a_sign_in" translatable="false">FatBook</string>
    <string name="title_welcome_back_to_sign_in">WELCOME BACK TO</string>
    <string name="title_fatbook_activity_login" translatable="false">FatBook</string>
    <string name="btn_sign_in_a_sign_in">SIGN IN</string>
    <string name="title_fatbook_a_login" translatable="false">FatBook</string>
    <string name="cat_dialog_login">Hello, Im Kuzya! \n How can I call you?</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="text_requirements_login">*Allows only letters and numbers, max length 16 chars</string>
    <string name="btn_next_login">NEXT</string>
    <string name="title_fatbook_a_password" translatable="false">FatBook</string>
    <string name="cat_dialog_password">Set account password.</string>
    <string name="hint_password_password">Password</string>
    <string name="text_requirements_password">*min length 8 chars, max length 16 chars</string>
    <string name="btn_next_password">NEXT</string>
    <string name="title_new_cook_in_skip_add">NEW COOK IN</string>
    <string name="title_fatbook_skip_add" translatable="false">FatBook</string>
    <string name="cat_dialog_skip_add">Nice to meet you, %s!\n Do you want to tell about yourself?</string>
    <string name="btn_yeah_go_skip_add">YEAH, GO!</string>
    <string name="btn_no_later_skip_add">LATER</string>
    <string name="title_username_fill_add_info">Username</string>
    <string name="hint_name_fill_add_info">Name</string>
    <string name="hint_secondname_fill_add_info">Second Name</string>
    <string name="hint_bday_fill_add_info">Birthday</string>
    <string name="hint_bio_fill_add_info">Bio</string>
    <string name="text_button_save_fill_add_info">SAVE</string>
    <string name="toolbar_username_profile">Username</string>
    <string name="text_fullname_profile">Introduce yourself</string>
    <string name="text_birthday">Eating Birthday cake: </string>
    <string name="text_bio_profile">Write your bio</string>
    <string name="title_recipes_profile">My recipes</string>
    <string name="title_favourites_profile">Favourites</string>
    <string name="toolbar_recipes_feed">Recipes</string>
    <string name="hint_search_recipe_feed">search…</string>
    <string name="title_recipe_preview_rv">Recipe title</string>
    <string name="title_recipe_preview_by_rv">by</string>
    <string name="title_recipe_preview_author_rv">recipe author</string>
    <string name="value_recipe_preview_forks_amount_rv" translatable="false">1339</string>
    <string name="toolbar_recipe_create">New recipe</string>
    <string name="hint_add_recipe_title">Recipe title</string>
    <string name="title_add_recipe_category">Recipe categories:</string>
    <string name="title_add_recipe_photo">Tasty photo:</string>
    <string name="title_add_recipe_ingredients">Ingredients:</string>
    <string name="title_add_recipe_description">Recipe:</string>
    <string name="hint_add_recipe_description">Cooking method</string>
    <string name="btn_save_recipe_create">SAVE</string>
    <string name="hint_rv_add_new_recipe_ingredient">Milk</string>
    <string name="hint_rv_add_new_recipe_ingredient_quantity">100 ml</string>
    <string name="title_add_ingredients_and_qty">Add ingredient</string>
    <string name="text_add">add</string>
    <string name="hint_quantity">quantity</string>
    <string name="text_select_ingredient">select ingredient</string>
    <string name="text_existing_ingredient">Existing Ingredient</string>
    <string name="toolbar_ingredients">Ingredients</string>
    <string name="toolbar_bookmarks">Bookmarks</string>
    <string name="toolbar_full_recipe">Full description</string>
    <string name="title_full_recipe_title">Recipe title</string>
    <string name="title_full_recipe_by">By:</string>
    <string name="title_full_recipe_author">Username</string>
    <string name="value_full_recipe_forks_quantity" translatable="false">123456</string>
    <string name="title_full_recipe_ingredients">Ingredients:</string>
    <string name="title_full_recipe_instruction">Recipe:</string>
    <string name="text_full_recipe_instruction">1)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at neque et neque malesuada ultrices sit amet nec lectus. Proin scelerisque feugiat tincidunt. Suspendisse vel. 2)Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at neque et neque malesuada ultrices sit amet nec lectus. Proin scelerisque feugiat tincidunt. Suspendisse vel.</string>
    <string name="title_recipe_view_ingredient">Ingredient</string>
    <string name="nav_feed" translatable="false">Feed</string>
    <string name="nav_search" translatable="false">Search</string>
    <string name="nav_recipe" translatable="false">Add recipe</string>
    <string name="nav_notifications" translatable="false">Notifications</string>
    <string name="nav_user_profile" translatable="false">Profile</string>
    <string name="hint_dialog_add_ingredient">Suggest ingredient</string>
    <string name="title_dialog_add_ingredient">Add ingredient:</string>
    <string name="title_view_recipe">View recipe</string>
    <string name="menu_recipe_delete">Delete</string>
    <string name="menu_recipe_cancel">Cancel</string>
    <string name="menu_recipe_confirm">Confirm</string>
    <string name="menu_recipe_edit">Edit</string>
    <string name="menu_user_profile_edit">Edit</string>
    <string name="menu_user_profile_confirm">Confirm</string>
    <string name="menu_user_profile_cancel">Cancel</string>
    <string name="mobile_nav_feed" translatable="false">Feed</string>
    <string name="mobile_nav_ingredients" translatable="false">Ingredients</string>
    <string name="mobile_nav_recipe_create" translatable="false">Add recipe</string>
    <string name="mobile_nav_bookmarks" translatable="false">Bookmarks</string>
    <string name="mobile_nav_user_profile" translatable="false">Profile</string>
    <string name="mobile_nav_recipe_view" translatable="false">View Recipe</string>
    <string name="mobile_nav_recipe_add_ingredient" translatable="false">Add ingredient</string>
    <string name="menu_user_profile_app_info">App info</string>
    <string name="menu_user_profile_logout">Logout</string>
    <string name="menu_user_profile_app_settings">App settings</string>
    <string name="menu_user_profile_edit_user_profile">Edit profile</string>
    <string name="menu_user_profile_users_badges">My Badges</string>
    <string name="dialog_recover_pass_vcode">Verification code was \n sent to e-mail \n %s</string>
</resources>