<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_user_profile_edit_profile"
        android:title="@string/menu_user_profile_edit_user_profile" />

    <item
        android:id="@+id/menu_user_profile_badges"
        android:title="@string/menu_user_profile_users_badges" />

    <item
        android:id="@+id/menu_user_profile_app_settings"
        android:title="@string/menu_user_profile_app_settings" />

    <item
        android:id="@+id/menu_user_profile_app_info"
        android:title="@string/menu_user_profile_app_info" />

    <item
        android:id="@+id/menu_user_profile_logout"
        android:title="@string/menu_user_profile_logout" />

</menu>