<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.fatbook.fatbookapp.ui.fragment.FeedFragment"
        android:label="@string/mobile_nav_feed"
        tools:layout="@layout/fragment_feed">

        <action
            android:id="@+id/action_go_to_recipe_view"
            app:destination="@id/navigation_recipe_view"
            app:popUpTo="@id/navigation_feed" />

    </fragment>

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.fatbook.fatbookapp.ui.fragment.IngredientsFragment"
        android:label="@string/mobile_nav_ingredients"
        tools:layout="@layout/fragment_ingredients" />

    <fragment
        android:id="@+id/navigation_recipe_create"
        android:name="com.fatbook.fatbookapp.ui.fragment.RecipeCreateFragment"
        android:label="@string/mobile_nav_recipe_create"
        tools:layout="@layout/fragment_recipe_create">

        <action
            android:id="@+id/action_go_to_add_ingredient"
            app:destination="@id/navigation_add_ingredient"
            app:popUpTo="@id/navigation_recipe_create" />

    </fragment>

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.fatbook.fatbookapp.ui.fragment.BookmarksFragment"
        android:label="@string/mobile_nav_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.fatbook.fatbookapp.ui.fragment.UserProfileFragment"
        android:label="@string/mobile_nav_user_profile"
        tools:layout="@layout/fragment_user_profile" >

        <action
            android:id="@+id/action_go_to_recipe_view_from_user_profile"
            app:destination="@id/navigation_recipe_view"
            app:popUpTo="@id/navigation_user_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_view"
        android:name="com.fatbook.fatbookapp.ui.fragment.RecipeViewFragment"
        android:label="@string/mobile_nav_recipe_view"
        tools:layout="@layout/fragment_recipe_view" />

    <fragment
        android:id="@+id/navigation_add_ingredient"
        android:name="com.fatbook.fatbookapp.ui.fragment.RecipeAddIngredientFragment"
        android:label="@string/mobile_nav_recipe_add_ingredient"
        tools:layout="@layout/fragment_add_ingredient" />

    <action
        android:id="@+id/action_go_to_feed"
        app:destination="@id/navigation_feed"
        app:popUpTo="@id/mobile_navigation" />
    <action
        android:id="@+id/action_go_to_ingredients"
        app:destination="@id/navigation_ingredients"
        app:popUpTo="@id/navigation_feed" />
    <action
        android:id="@+id/action_go_to_recipe_create"
        app:destination="@id/navigation_recipe_create"
        app:popUpTo="@id/navigation_feed" />
    <action
        android:id="@+id/action_go_to_bookmarks"
        app:destination="@id/navigation_bookmarks"
        app:popUpTo="@id/navigation_feed" />

    <action
        android:id="@+id/action_go_to_profile"
        app:destination="@id/navigation_user_profile"
        app:popUpTo="@id/navigation_feed" />

</navigation>