<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue_grey_50"
    tools:context=".ui.activity.SignInActivity">

    <TextView
        android:id="@+id/textView_sign_in_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/title_welcome_back_to_sign_in"
        android:textColor="@color/color_blue_grey_600"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textView_sign_in_app_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="45dp"
        android:text="@string/title_fatbook_a_sign_in"
        android:textColor="@color/color_pink_a200"
        android:textSize="45sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imageView_sign_in_catChef"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="130dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/kuzya_welcome" />

    <EditText
        android:id="@+id/editText_sign_in_login"
        android:layout_width="234dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints="@null"
        android:background="@drawable/round_corner_edittext_login"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_username_login"
        android:inputType="text"
        android:maxLength="16"
        android:textAlignment="center"
        android:textColor="@color/color_grey_900"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_sign_in_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText_sign_in_password"
        android:layout_marginBottom="20dp"
        android:layout_width="234dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:autofillHints="@null"
        android:background="@drawable/round_corner_edittext_login"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_password_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textAlignment="center"
        android:textColor="@color/color_grey_900"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/pinkButton"
        android:text="@string/btn_sign_in_a_sign_in"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView_sign_in_tagline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

<!--        <ImageView-->
<!--            android:id="@+id/imageView_login_google_play"-->
<!--            android:layout_width="24dp"-->
<!--            android:layout_height="24dp"-->
<!--            android:elevation="10dp"-->
<!--            android:contentDescription="@string/title_button_login_googleplay"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/button_login_log_in_with_google"-->
<!--            app:layout_constraintLeft_toLeftOf="@id/button_login_log_in_with_google"-->
<!--            app:layout_constraintTop_toTopOf="@id/button_login_log_in_with_google"-->
<!--            android:layout_marginStart="24dp"-->
<!--            app:srcCompat="@drawable/icon_googleplay" />-->

    <TextView
        android:id="@+id/textView_sign_in_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tagline_fatbook"
        android:textColor="@color/color_blue_grey_200"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_sign_in_copyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_sign_in_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_copyright"
        android:textColor="@color/color_blue_grey_200"
        android:textSize="11sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/textView_sign_in_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_sign_in_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:paddingBottom="10dp"
        android:text="@string/tag_version"
        android:textColor="@color/color_blue_grey_200"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>